tests/warnings/unused/unused-instance.fil
comp Add<'G:1>() -> () {}

comp main<'G:1>() -> () {
  Add := new Add;
}